Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35395

GET_CLUSTER_CONFIG can respond with the wrong bucket's data against memcache bucket

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 6.0.3, 6.5.0
    • 5.5.0, 5.5.1, 5.5.2, 5.5.3, 5.5.4, 5.5.5, 5.5.6, 6.0.0, 6.0.1, 6.0.2, 6.5.0
    • memcached
    • None
    • Triaged
    • Yes

    Description

      Using Mad-Hatter build 3916 (although was happening with an earlier version which prompted me to upgrade). I have 2 buckets - memd (memcached bucket) and default (couchbase bucket). I previously had a couchbase bucket called memddd. 

      I do a select bucket against memd and then a GET_CLUSTER_CONFIG, the config fetch is returning with the config for the deleted memddd bucket. I believe that expected behaviour would be for the operation to fail.

      I've attached 2 wireshark images, one of the select bucket and one of the subsequent config fetch. The Go code that I'm using is at https://gist.github.com/chvck/4544dc2e178aa3dddf6408a6483246a0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            charles.dixon Charles Dixon
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty