MB-35395: Delete bucket did not reset cluster config

If the new bucket created was a memcached style bucket (which
don't have a cluster config) it would still serve the cluster
config from the old bucket.

Change-Id: I9cf6d7c0dca50ef9ef0ae49923cd5f29d1c2404b
Reviewed-on: http://review.couchbase.org/113145
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: James Harrison <james.harrison@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>